--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,16 +5,17 @@
   --foreground: #171717;
 }
 
-
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: #fff  url('/assets/BackgroundNoise.svg') repeat center center; /* Add your SVG as a background */
+  background-size: cover; /* Cover the whole page */
+  font-size: 16px; /* This means 1rem = 16px */
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
   font-family: 'Plus Jakarta Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -37,7 +38,3 @@ a {
   }
 }
 
-.boxed-layout {
-  max-width: 1200px; /* Adjust the max-width as needed */
-  margin: 0 auto; /* Centers the container horizontally */
- }
